package ge_JavaP1;
import num.game.logics.NumGame;


public class Main {
	
	public static void main(String[] args) {
		NumGame a ;
		a= new NumGame();
		a.start();
	}
	
}

